5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1709_3060.log
== TEST (2019-05-02 11:06:40) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 >6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	dano == d1+d2+1
	print("CONSTRICAO")
	print(dano)

-- ERROR:
File "XXXX", line 14
    elif(nome.upper != "AAMEUL" and nome.upper() != "HETHREDIAH" and nome.upper != "RAKSHASA")
                                                                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:07:25) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 >6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(1+d1+d2)

-- ERROR:
File "XXXX", line 14
    elif(nome.upper != "AAMEUL" and nome.upper() != "HETHREDIAH" and nome.upper != "RAKSHASA")
                                                                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:09:48) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 >6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(1+d1+d2)
elif(d1+d2 < 5):
	print("POLEM")
	print((d1+d2+1)*r)
elif(d1+d2 >= 5 and d1+d2 < 12):
	print("FRAQUEZA")
	print(d1*d2)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:10:01) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 >6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(1+d1+d2)
elif(d1+d2 < 5):
	print("POLEM")
	print((d1+d2+1)*r)
elif(d1+d2 >= 5 and d1+d2 < 12):
	print("FRAQUEZA")
	print(d1*d2)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:10:11) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 >6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(1+d1+d2)
elif(d1+d2 < 5):
	print("POLEM")
	print((d1+d2+1)*r)
elif(d1+d2 >= 5 and d1+d2 < 12):
	print("FRAQUEZA")
	print(d1*d2)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:10:24) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 >6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(1+d1+d2)
elif(d1+d2 < 5):
	print("POLEM")
	print((d1+d2+1)*r)
elif(d1+d2 >= 5 and d1+d2 < 12):
	print("FRAQUEZA")
	print(d1*d2)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:10:37) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 >6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(1+d1+d2)
elif(d1+d2 < 5):
	print("POLEM")
	print((d1+d2+1)*r)
elif(d1+d2 >= 5 and d1+d2 < 12):
	print("FRAQUEZA")
	print(d1*d2)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:10:45) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 >6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(1+d1+d2)
elif(d1+d2 < 5):
	print("POLEM")
	print((d1+d2+1)*r)
elif(d1+d2 >= 5 and d1+d2 < 12):
	print("FRAQUEZA")
	print(d1*d2)
-- EXECUTION TIME:
0.193444
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
FRAQUEZA
15
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
POLEM
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:12:02) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 > 6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(1+d1+d2)
elif(d1+d2 < 5):
	print("POLEM")
	print((d1+d2+1)*r)
elif(d1+d2 >= 5 and d1+d2 < 12):
	print("FRAQUEZA")
	print(d1*d2)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:12:22) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 > 6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(1+d1+d2)
elif(d1+d2 < 5):
	print("POLEM")
	print((d1+d2+1)*r)
elif(d1+d2 >= 5 and d1+d2 < 12):
	print("FRAQUEZA")
	print(d1*d2)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:12:32) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 > 6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(1+d1+d2)
elif(d1+d2 < 5):
	print("POLEM")
	print((d1+d2+1)*r)
elif(d1+d2 >= 5 and d1+d2 < 12):
	print("FRAQUEZA")
	print(d1*d2)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:12:46) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 > 6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(1+d1+d2)
elif(d1+d2 < 5):
	print("POLEM")
	print((d1+d2+1)*r)
elif(d1+d2 >= 5 and d1+d2 < 12):
	print("FRAQUEZA")
	print(d1*d2)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:13:26) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 > 6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(1+d1+d2)
elif(d1+d2 < 5):
	print("POLEM")
	print((d1+d2+1)*r)
elif(d1+d2 >= 5 and d1+d2 < 12):
	print("FRAQUEZA")
	print(d1*d2)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:14:16) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 > 6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(d1+d2+!)
elif(d1+d2 < 5):
	print("POLEM")
	print((d1+d2+1)*r)
elif(d1+d2 >= 5 and d1+d2 < 12):
	print("FRAQUEZA")
	print(d1*d2)
-- ERROR:
File "XXXX", line 9
    print(d1+d2+!)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:14:27) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 > 6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(d1+d2+1)
elif(d1+d2 < 5):
	print("POLEM")
	print((d1+d2+1)*r)
elif(d1+d2 >= 5 and d1+d2 < 12):
	print("FRAQUEZA")
	print(d1*d2)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:16:11) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))
dano1 = d1+d2+1
dano2 = (d1+d2+1)*r
dano3 = d1*d2

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 > 6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(dano1)
elif(d1+d2 < 5):
	print("POLEM")
	print(dano2)
elif(d1+d2 >= 5 and d1+d2 < 12):
	print("FRAQUEZA")
	print(dano3)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:16:20) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))
dano1 = d1+d2+1
dano2 = (d1+d2+1)*r
dano3 = d1*d2

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 > 6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(dano1)
elif(d1+d2 < 5):
	print("POLEM")
	print(dano2)
elif(d1+d2 >= 5 and d1+d2 < 12):
	print("FRAQUEZA")
	print(dano3)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:16:36) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))
dano1 = d1+d2+1
dano2 = (d1+d2+1)*r
dano3 = d1*d2

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 > 6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(dano1)
elif(d1+d2 < 5):
	print("POLEM")
	print(dano2)
else:
	print("FRAQUEZA")
	print(dano3)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:17:09) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))
dano1 = d1+d2+1
dano2 = (d1+d2+1)*r
dano3 = d1*d2

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 > 6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(dano1)
elif(d1+d2 < 5):
	print("POLEM")
	print(dano2)
else:
	print("FRAQUEZA")
	print(dano3)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:17:31) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))
dano1 = d1+d2+1
dano2 = (d1+d2+1)*r
dano3 = d1*d2

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 > 6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(dano1)
elif(d1+d2 < 5):
	print("POLEM")
	print(dano2)
else:
	print("FRAQUEZA")
	print(dano3)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:17:36) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))
dano1 = d1+d2+1
dano2 = (d1+d2+1)*r
dano3 = d1*d2

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 > 6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(dano1)
elif(d1+d2 < 5):
	print("POLEM")
	print(dano2)
else:
	print("FRAQUEZA")
	print(dano3)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:17:52) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))
dano1 = d1+d2+1
dano2 = (d1+d2+1)*r
dano3 = d1*d2

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 > 6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(dano1)
elif(d1+d2 < 5):
	print("POLEM")
	print(dano2)
else:
	print("FRAQUEZA")
	print(dano3)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:24:14) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))
dano1 = d1+d2+1
dano2 = (d1+d2+1)*r
dano3 = d1*d2

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 > 6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(dano1)
elif(d1+d2 < 5):
	print("POLEM")
	print(dano2)
else:
	print("FRAQUEZA")
	print(dano3)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:24:51) 
-- CODE:
d1 = int(input("Dado 1:"))
d2 = int(input("Dado 2:"))
r = int(input("Rodadas:"))
dano1 = d1+d2+1
dano2 = (d1+d2+1)*r
dano3 = d1*d2

if (d1 < 1 or d1 > 6 or d2 < 1 or d2 > 6 or r < 0):
	print("Entrada invalida")
elif(d1+d2 == 12):
	print("CONSTRICAO")
	print(dano1)
elif(d1+d2 < 5):
	print("POLEM")
	print(dano2)
else:
	print("FRAQUEZA")
	print(dano3)
-- EXECUTION TIME:
0.154052
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
FRAQUEZA
15
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
POLEM
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:31:35) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1 1 <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 9
    if(dado1  > 0 and dado1 1 <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:31:42) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:31:50) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:32:00) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:32:06) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.204593
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
FRAQUEZA
15
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
POLEM
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:33:29) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:33:39) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:33:45) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:34:33) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:34:42) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:34:48) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:35:24) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:35:42) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 <= 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:36:05) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 <= 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:36:37) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 <= 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:36:48) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 <= 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:36:56) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 <= 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:37:02) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 <= 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.167531
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
FRAQUEZA
15
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
POLEM
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:37:06) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.127521
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
FRAQUEZA
15
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
POLEM
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:37:19) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:37:28) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:37:32) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:37:33) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:37:43) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:38:21) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:38:32) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:38:54) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:39:38) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if((dado1  > 0 and dado1  <= 6) and (dado2 >0 and dado2 <=6) (and r >= 0)):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 9
    if((dado1  > 0 and dado1  <= 6) and (dado2 >0 and dado2 <=6) (and r >= 0)):
                                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:39:46) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if((dado1  > 0 and dado1  <= 6) and (dado2 >0 and dado2 <=6) and (r >= 0)):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:39:52) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if((dado1  > 0 and dado1  <= 6) and (dado2 >0 and dado2 <=6) and (r >= 0)):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:40:00) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if((dado1  > 0 and dado1  <= 6) and (dado2 >0 and dado2 <=6) and (r >= 0)):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:40:05) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if((dado1  > 0 and dado1  <= 6) and (dado2 >0 and dado2 <=6) and (r >= 0)):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:40:17) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if((dado1  > 0 and dado1  <= 6) and (dado2 >0 and dado2 <=6) and (r >= 0)):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.247587
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
FRAQUEZA
15
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
POLEM
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:41:56) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if((dado1  > 0 and dado1  <= 6) and (dado2 >0 and dado2 <=6) and (r >= 0)):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:42:05) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1*dado2

if((dado1  > 0 and dado1  <= 6) and (dado2 >0 and dado2 <=6) and (r >= 0)):
	if(dado1+dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1+dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:44:00) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1 * dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and (r >= 0):
	if(dado1 + dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1 + dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 9
    if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and (r >= 0):
                                                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:44:11) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1 * dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1 + dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1 + dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:44:27) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1 * dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1 + dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1 + dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:44:50) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1 * dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1 + dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1 + dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:45:01) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1 * dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1 + dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1 + dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:45:08) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1 * dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1 + dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1 + dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:45:14) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1 * dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1 + dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1 + dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:45:24) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1 * dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1 + dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1 + dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:45:28) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1 * dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1 + dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1 + dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:45:36) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1)*r
danoF = dado1 * dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1 + dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1 + dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:46:18) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1) * r
danoF = dado1 * dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1 + dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1 + dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:46:22) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1) * r
danoF = dado1 * dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1 + dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1 + dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:46:27) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1) * r
danoF = dado1 * dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1 + dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1 + dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:47:25) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1) * r
danoF = dado1 * dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1 + dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1 + dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:47:27) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1) * r
danoF = dado1 * dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1 + dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1 + dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.137488
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
FRAQUEZA
15
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
POLEM
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:48:00) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1) * r
danoF = dado1 * dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r > 0):
	if(dado1 + dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1 + dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.187214
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
FRAQUEZA
15
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
POLEM
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:48:22) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1) * r
danoF = dado1 * dado2

if(dado1  > 0 and dado1  <= 6 and dado2 >0 and dado2 <=6 and r >= 0):
	if(dado1 + dado2 == 12):
		print("CONSTRICAO")
		print(danoC)
	elif(dado1 + dado2 < 5):
		print("POLEM")
		print(danoP)
	else:
		print("FRAQUEZA")
		print(danoF)
else:
	print("Entrada invalida")
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:52:41) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1) * r
danoF = dado1 * dado2

if(dado1 < 1 or dado1 >6 or dado2<1 or dado2>6 or r<0):
	print("entrada invalida")
elif(dado1 + dado2 == 12):
	print("CONSTRICA0")
	print(danoC)
elif(dado1 + dado2 <5):
	print("POLEM")
	print(danoP)
elif(5 >= dado1+dado2 and dado1+dado2 < 12):
	print("FRAQUEZA")
	print(danoF)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:52:44) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1) * r
danoF = dado1 * dado2

if(dado1 < 1 or dado1 >6 or dado2<1 or dado2>6 or r<0):
	print("entrada invalida")
elif(dado1 + dado2 == 12):
	print("CONSTRICA0")
	print(danoC)
elif(dado1 + dado2 <5):
	print("POLEM")
	print(danoP)
elif(5 >= dado1+dado2 and dado1+dado2 < 12):
	print("FRAQUEZA")
	print(danoF)
-- EXECUTION TIME:
0.189505
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:

-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
entrada invalida
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
POLEM
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:52:49) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1) * r
danoF = dado1 * dado2

if(dado1 < 1 or dado1 >6 or dado2<1 or dado2>6 or r<0):
	print("Entrada invalida")
elif(dado1 + dado2 == 12):
	print("CONSTRICA0")
	print(danoC)
elif(dado1 + dado2 <5):
	print("POLEM")
	print(danoP)
elif(5 >= dado1+dado2 and dado1+dado2 < 12):
	print("FRAQUEZA")
	print(danoF)
-- EXECUTION TIME:
0.140622
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:

-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
POLEM
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:52:58) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1) * r
danoF = dado1 * dado2

if(dado1 < 1 or dado1 >6 or dado2<1 or dado2>6 or r<0):
	print("Entrada invalida")
elif(dado1 + dado2 == 12):
	print("CONSTRICA0")
	print(danoC)
elif(dado1 + dado2 <5):
	print("POLEM")
	print(danoP)
elif(5 >= dado1+dado2 and dado1+dado2 < 12):
	print("FRAQUEZA")
	print(danoF)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:53:02) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1) * r
danoF = dado1 * dado2

if(dado1 < 1 or dado1 >6 or dado2<1 or dado2>6 or r<0):
	print("Entrada invalida")
elif(dado1 + dado2 == 12):
	print("CONSTRICA0")
	print(danoC)
elif(dado1 + dado2 <5):
	print("POLEM")
	print(danoP)
elif(5 >= dado1+dado2 and dado1+dado2 < 12):
	print("FRAQUEZA")
	print(danoF)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:53:13) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1) * r
danoF = dado1 * dado2

if(dado1 < 1 or dado1 >6 or dado2<1 or dado2>6 or r<0):
	print("Entrada invalida")
elif(dado1 + dado2 == 12):
	print("CONSTRICA0")
	print(danoC)
elif(dado1 + dado2 <5):
	print("POLEM")
	print(danoP)
elif(5 >= dado1+dado2 and dado1+dado2 < 12):
	print("FRAQUEZA")
	print(danoF)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:53:35) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1) * r
danoF = dado1 * dado2

if(dado1 < 1 or dado1 >6 or dado2<1 or dado2>6 or r<0):
	print("Entrada invalida")
elif(dado1 + dado2 == 12):
	print("CONSTRICA0")
	print(danoC)
elif(dado1 + dado2 <5):
	print("POLEM")
	print(danoP)
elif(dado1+dado2 >=5 and dado1+dado2 < 12):
	print("FRAQUEZA")
	print(danoF)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:53:41) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1) * r
danoF = dado1 * dado2

if(dado1 < 1 or dado1 >6 or dado2<1 or dado2>6 or r<0):
	print("Entrada invalida")
elif(dado1 + dado2 == 12):
	print("CONSTRICA0")
	print(danoC)
elif(dado1 + dado2 <5):
	print("POLEM")
	print(danoP)
elif(dado1+dado2 >=5 and dado1+dado2 < 12):
	print("FRAQUEZA")
	print(danoF)
-- EXECUTION TIME:
0.185674
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
FRAQUEZA
15
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
POLEM
27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:54:31) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1) * r
danoF = dado1 * dado2

if(dado1 < 1 or dado1 >6 or dado2<1 or dado2>6 or r<0):
	print("Entrada invalida")
elif(dado1 + dado2 == 12):
	print("CONSTRICA0")
	print(danoC)
elif(dado1 + dado2 <5):
	print("POLEM")
	print(danoP)
elif(dado1+dado2 >=5 and dado1+dado2 < 12):
	print("FRAQUEZA")
	print(danoF)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:54:37) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1) * r
danoF = dado1 * dado2

if(dado1 < 1 or dado1 >6 or dado2<1 or dado2>6 or r<0):
	print("Entrada invalida")
elif(dado1 + dado2 == 12):
	print("CONSTRICA0")
	print(danoC)
elif(dado1 + dado2 <5):
	print("POLEM")
	print(danoP)
elif(dado1+dado2 >=5 and dado1+dado2 < 12):
	print("FRAQUEZA")
	print(danoF)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:54:45) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1) * r
danoF = dado1 * dado2

if(dado1 < 1 or dado1 >6 or dado2<1 or dado2>6 or r<0):
	print("Entrada invalida")
elif(dado1 + dado2 == 12):
	print("CONSTRICA0")
	print(danoC)
elif(dado1 + dado2 <5):
	print("POLEM")
	print(danoP)
elif(dado1+dado2 >=5 and dado1+dado2 < 12):
	print("FRAQUEZA")
	print(danoF)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:14:40) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1) * r
danoF = dado1 * dado2

if(dado1 < 1 or dado1 >6 or dado2<1 or dado2>6 or r<0):
	print("Entrada invalida")
elif(dado1 + dado2 == 12):
	print("CONSTRICA0")
	print(danoC)
elif(dado1 + dado2 <5):
	print("POLEM")
	print(danoP)
elif(dado1+dado2 >=5 and dado1+dado2 < 12):
	print("FRAQUEZA")
	print(danoF)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:15:17) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1) * r
danoF = dado1 * dado2

if(dado1 < 1 or dado1 >6 or dado2<1 or dado2>6 or r<0):
	print("Entrada invalida")
elif(dado1 + dado2 == 12):
	print("CONSTRICA0")
	print(danoC)
elif(dado1 + dado2 <5):
	print("POLEM")
	print(danoP)
elif(dado1+dado2 >=5 and dado1+dado2 < 12):
	print("FRAQUEZA")
	print(danoF)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:15:35) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1) * r
danoF = dado1 * dado2

if(dado1 < 1 or dado1 >6 or dado2<1 or dado2>6 or r<0):
	print("Entrada invalida")
elif(dado1 + dado2 == 12):
	print("CONSTRICA0")
	print(danoC)
elif(dado1 + dado2 <5):
	print("POLEM")
	print(danoP)
elif(dado1+dado2 >=5 and dado1+dado2 < 12):
	print("FRAQUEZA")
	print(danoF)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 17:17:51) 
-- CODE:
dado1 = int(input("Dado 1: "))
dado2 = int(input("Dado 2: "))
r = int(input("Rodadas: "))

danoC = dado1 + dado2 + 1
danoP = (dado1 + dado2 + 1) * r
danoF = dado1 * dado2

if(dado1 < 1 or dado1 >6 or dado2<1 or dado2>6 or r<0):
	print("Entrada invalida")
elif(dado1 + dado2 == 12):
	print("CONSTRICA0")
	print(danoC)
elif(dado1 + dado2 <5):
	print("POLEM")
	print(danoP)
elif(dado1+dado2 >=5 and dado1+dado2 < 12):
	print("FRAQUEZA")
	print(danoF)
-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
